# docs/swagger.json
@@ -719,13 +719,14 @@
                 "summary": "tweet list",
                 "parameters": [
                     {
-                        "description": "pageForm",
-                        "name": "pageForm",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/utils.PageForm"
-                        }
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -946,13 +947,19 @@
                 "summary": "search tweet",
                 "parameters": [
                     {
-                        "description": "searchForm",
-                        "name": "searchForm",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/forms.SearchForm"
-                        }
+                        "type": "string",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1107,13 +1114,19 @@
                 "summary": "search user",
                 "parameters": [
                     {
-                        "description": "searchForm",
-                        "name": "searchForm",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/forms.SearchForm"
-                        }
+                        "type": "string",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1449,20 +1462,6 @@
                 }
             }
         },
-        "forms.SearchForm": {
-            "type": "object",
-            "properties": {
-                "keyword": {
-                    "type": "string"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "size": {
-                    "type": "integer"
-                }
-            }
-        },
         "forms.Tweet": {
             "type": "object",
             "properties": {
@@ -1625,17 +1624,6 @@
                 },
                 "success": {
                     "type": "boolean"
-                }
-            }
-        },
-        "utils.PageForm": {
-            "type": "object",
-            "properties": {
-                "page": {
-                    "type": "integer"
-                },
-                "size": {
-                    "type": "integer"
                 }
             }
         }
